# controllerRobot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
demos/: basicGalgo.cpp
demos/hardware/: angle.cpp  current.cpp  speed.cpp  spi-map.cpp  spi-multi.cpp  spi-ports.cpp  spi-single.cpp  syncReader.cpp  syncWriter.cpp  unsortedMerge.cpp
include/Board/: algorithm.h  algorithm.tpp  angle.h  angle.tpp  board.h  boardDynamixel.h  boardGalgo.h  communicationResult.h  current.h  current.tpp  exceptions.h  groupCommunicationHelper.h  groupCommunicationHelper.tpp  groupWriteHelper.tpp  speed.h  speed.tpp  spi.h  syncReader.h  syncReader.tpp  syncWriter.h  syncWriter.tpp
include/Board/Galgo/: addParamException.h  algorithm.h  algorithm.tpp  angle.h  angle.tpp  boardGalgo.h  communicationResult.h  current.h  current.tpp  exceptions.h  groupCommunicationHelper.h  groupCommunicationHelper.tpp  groupWriteHelper.h  speed.h  speed.tpp  spi.h  syncReader.h  syncReader.tpp  syncWriter.h  syncWriter.tpp
include/Helpers/: algorithm.h  algorithm.tpp  angle.h  angle.tpp  current.h  current.tpp  speed.h  speed.tpp  utilities.h
include/Wrappers/d2xx/: spi.h
include/Wrappers/dynamixel3/: addParamException.h  communicationResult.h  globals.h  groupCommunicationHelper.h  groupCommunicationHelper.tpp  groupWriteHelper.h  groupWriteHelper.tpp  syncReader.h  syncReader.tpp  syncWriter.h  syncWriter.tpp
notes/: spi.pseudocode
resources/: boardGalgo.xml  configGlobal.xml
resources/Galgo/: 98-adafruit-ft232h.rules  install-configuration.sh  rc.local  udevadm-trigger.sh
spikes/: current_limit.cpp
spikes/BetterGroupWriting/: dummies.cpp  dummies.h  syncWriter.h  syncWriter.tpp  test.cpp
src/Board/: addParamException.cpp  boardDynamixel.cpp  boardGalgo.cpp  communicationResult.cpp  exceptions.cpp  spi.cpp
src/Board/Galgo/: addParamException.cpp  boardGalgo.cpp  communicationResult.cpp  exceptions.cpp  spi.cpp
src/Wrappers/d2xx/: spi.cpp
src/Wrappers/dynamixel3/: addParamException.cpp  communicationResult.cpp
tests/: angle.cpp  current.cpp  speed.cpp  spi-map.cpp  spi-multi.cpp  spi-ports.cpp  spi-single.cpp  syncReader.cpp  syncWriter.cpp  unsortedMerge.cpp
